@@ -115,10 +115,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_speling: Don't embed Referer data in link in error page.
-     trunk patch: http://svn.apache.org/r1808780
-     2.4.x: trunk patch applies
-     +1: niq, ylavic, elukey
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
